--- a/src/ashwini/config/costmap_common_params.yaml
+++ b/src/ashwini/config/costmap_common_params.yaml
@@ -3,8 +3,27 @@ raytrace_range: 8.5
 footprint: [[0.35,0.25],[0.35,-0.25],[-0.35,-0.25],[-0.35,0.25]]
 map_topic: /map
 subscribe_to_update: true
-observation_sources: laser_scan_sensor 
-laser_scan_sensor: {sensor_frame: hokuyo, data_type: LaserScan, topic: /lidar, marking: true, clearing: true }
+
+observation_sources: laser_scan_sensor lane_obstacles_sensor
+
+laser_scan_sensor:
+  sensor_frame: hokuyo
+  data_type: LaserScan
+  topic: /lidar
+  marking: true
+  clearing: true
+
+lane_obstacles_sensor:
+  sensor_frame: map
+  data_type: PointCloud
+  topic: /lane_obstacles_cloud
+  marking: true
+  clearing: false
+  max_obstacle_height: 2.0
+  min_obstacle_height: 0.0
+  obstacle_range: 10.0
+  raytrace_range: 10.0
+
 global_frame: map
 robot_base_frame: base_link
 always_send_full_costmap: true
